--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title> Malvin King </title>
+  <title> 𝐌𝐀𝐑𝐈𝐎𝐍 𝐗 𝐁𝐘 𝐉𝐀𝐂𝐊𝐒 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
 body {
@@ -81,19 +81,15 @@ body {
 <body>
 <body><marquee style="color:blue;background-color:royal;height:75px;">
  
-  Hello 👋 welcome to Malvin King web site 🍀</marquee>
+  Hello 👋 welcome to 𝐌𝐀𝐑𝐈𝐎𝐍 𝐗 web site 🍀</marquee>
   <button onclick="window.open(`/qr`)" class="btn">qr code</button>
   <button onclick="window.open(`/pair`)" class="btn">pair code</button>
-  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/kingmalvn/RAVENS-MD`)" class="btn">Deploy</button>
-  <button onclick="window.open('https://github.com/kingmalvn/RAVENS-MD')" class="btn">Bot Repo</button>
-  <button onclick="window.open(`https://wa.me/263714757857`)" class="btn">Developer 1</button>
-  <button onclick="window.open(`https://wa.me/263780958186`)" class="btn">Developer 2</button>
-  <button onclick="window.open(`https://wa.me/263780166288`)" class="btn">Developer 3</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029Vac8SosLY6d7CAFndv3Z`)" class="btn">Wa Group</button>
-  <button onclick="window.open(`https://youtube.com/@MalvinKing_TECH`)" class="btn">YouTube</button>
-  <button onclick="window.open(`https://www.tiktok.com/@malvinquotes`)" class="btn" >TikTok</button>
-  <button onclick="window.open(`https://t.me/malvinking2`)" class="btn">Telegram</button>
-
+  <button onclick="window.open(`https://dashboard.heroku.com/new?template=https://github.com/marion-jacks/marionx`)" class="btn">Deploy</button>
+  <button onclick="window.open('https://github.com/marion-jacks/marionx')" class="btn">Bot Repo</button>
+  <button onclick="window.open(`https://wa.me/254796087764`)" class="btn">Developer 1</button>
+  <button onclick="window.open(`https://wa.me/254754944672`)" class="btn">Developer 2</button>
+  <button onclick="window.open(`https://whatsapp.com/channel/0029Vb58ejm35fLoqYxEhn3r`)" class="btn">Wa Group</button>
+  
 
 </body>
 </html>
