--- a/pair.html
+++ b/pair.html
@@ -142,12 +142,12 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">MALVIN  KING PAIRING CODE</h3>
+            <h3 class="centered-text">𝐌𝐀𝐑𝐈𝐎𝐍 𝐗 PAIRING CODE</h3>
             <br>
-            <h6>Made By Malvin King🔥🥳.</h6>
+            <h6>Made By 𝐌𝐀𝐑𝐈𝐎𝐍 🔥🥳.</h6>
             <h6>Enter Your Number with Country Code.</h6>
             <div class="input-container">
-              <input placeholder="2637147xxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
+              <input placeholder="2547xxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
               <button id="submit">Submit</button>
             </div>
             
@@ -188,10 +188,10 @@
       } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
         a.innerHTML = '<a style="color:red;font-weight:bold">Invalid Number</a><br><br>';
       } else {
-        const Malvin_King = c.value.replace(/[^0-9]/g, "");
+        const 𝐌𝐀𝐑𝐈𝐎𝐍𝐗 = c.value.replace(/[^0-9]/g, "");
         let bb = "";
         let bbc = "";
-        const cc = Malvin_King.split('');
+        const cc = 𝐌𝐀𝐑𝐈𝐎𝐍.split('');
         cc.map(a => {
           bbc += a;
           if (bbc.length == 3) {
@@ -206,7 +206,7 @@
         c.value = "+" + bb;
         c.style = "color:black;font-size:20px";
         a.innerHTML = '<a style="color:white;font-weight:bold">Please Wait...</a><br><br>';
-        let { data } = await axios(`/code?number=${Malvin_King}`);
+        let { data } = await axios(`/code?number=${MARION_X}`);
         let code = data.code || "Service Unavailable";
         a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:white;font-weight:bold">' + code + '</span></font><br><br><br>';
       }
