--- a/main.html
+++ b/main.html
@@ -90,7 +90,7 @@ body {
   <button onclick="window.open(`https://wa.me/254754944672`)" class="btn">Developer 2</button>
   <button onclick="window.open(`https://wa.me/263780166288`)" class="btn">Developer 3</button>
   <button onclick="window.open(`https://whatsapp.com/channel/0029Vb58ejm35fLoqYxEhn3r`)" class="btn">Wa Group</button>
-  <button onclick="window.open(`https://youtube.com/@MalvinKing_TECH`)" class="btn">YouTube</button>
+  <button onclick="window.open(`https://youtube.com/@jacksmohaaz?si=O4egQwIkO_03g6Er`)" class="btn">YouTube</button>
   <button onclick="window.open(`https://www.tiktok.com/@malvinquotes`)" class="btn" >TikTok</button>
   <button onclick="window.open(`https://t.me/malvinking2`)" class="btn">Telegram</button>
 
